- Fixed an issue where the focus outline was not displayed anymore on IE. - Fixed the padding of the JavaScript editor in tutorial mode. - Fixed an issue where the user was not able to do a Shift+Tab after clicking the OK button of a step of the tutorial very quickly after it was displayed. - Fixed an issue where the Enter key was not supported on IE in the tutorial.

--- a/theme/accessibility.less
+++ b/theme/accessibility.less
@@ -13,7 +13,8 @@
     outline: 1px solid transparent !important;
 }
 
-@media not all and (pointer:coarse) {
+@media not all and (pointer:coarse), /* If not touch screen */
+all and (-ms-high-contrast: none), (-ms-high-contrast: active) { /* Or if IE 10+ */
     *:not([tabindex='-1']):focus,
     [role='menuitem']:focus {
         outline: 2px solid #4D90FE !important;
