--- a/theme/tutorial.less
+++ b/theme/tutorial.less
@@ -12,6 +12,9 @@
 .tutorial #maineditor .full-abs {
     top: 5.5rem;
 }
+.tutorial #maineditor #monacoEditor {
+    top: 0rem;
+}
 /* Tutorial Mode */
 #menubar .ui.menu .item.tutorial-menuitem {
     background: rgba(27, 28, 29, 0.3) !important;
